--- a/estilos/global.css
+++ b/estilos/global.css
@@ -125,6 +125,15 @@ img {
 .font-2-m {
   font: 500 1.125rem/1.5rem "Roboto", sans-serif;
 }
+.font-2-l-b {
+  font: 500 1.5rem/2.25rem "Roboto", sans-serif;
+}
+.font-1-m {
+  font: 400 1.125rem/1.5rem "Poppins", sans-serif;
+}
+.font-2-s {
+  font: 400 1rem/1.5rem "Roboto", sans-serif;
+}
 /*Conteiner tamanho*/
 .conteiner-base {
   max-width: 75rem;
