--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,3 +2,4 @@
 @import url("../home/header.css");
 @import url("../home/intro-home.css");
 @import url("../home/lista-modelos.css");
+@import url("../home/tecnologias.css");
