add new section
Adicionada seção de parceiros.

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,3 +3,4 @@
 @import url("../home/intro-home.css");
 @import url("../home/lista-modelos.css");
 @import url("../home/tecnologias.css");
+@import url("../home/parceiros.css");
