--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,3 +4,4 @@
 @import url("../home/lista-modelos.css");
 @import url("../home/tecnologias.css");
 @import url("../home/parceiros.css");
+@import url("../home/depoimento.css");
