--- a/home/lista-modelos.css
+++ b/home/lista-modelos.css
@@ -14,10 +14,10 @@
 .lista-bikes img {
   border-radius: 5px;
   margin-bottom: 1rem;
-  transition: 0.2s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 .lista-bikes img:hover {
-  transform: translateY(-2px);
+  scale: 1.009;
   box-shadow: 2px 2px 20px #7a7a7a;
 }
 .lista-bikes a {
