--- a/home/parceiros.css
+++ b/home/parceiros.css
@@ -6,7 +6,7 @@
   grid-template-columns: repeat(4, 1fr);
   max-width: 1400px;
   margin: 0 auto;
-  padding: 20px 0px;
+  padding: 40px 0px;
 }
 .lista-parceiros li {
   display: flex;
@@ -22,6 +22,11 @@
 }
 .lista-parceiros li img {
   margin: auto;
+  transition: 0.3s ease-in;
+  cursor: pointer;
+}
+.lista-parceiros li img:hover {
+  scale: 1.2;
 }
 @media (max-width: 800px) {
   .parceiros {
@@ -29,7 +34,7 @@
     padding: 3.5rem 1.25rem 7.5rem 1.25rem;
   }
   .parceiros h2 {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-size: 2rem;
     line-height: 1.5rem;
   }
