--- a/estilos/global.css
+++ b/estilos/global.css
@@ -119,6 +119,9 @@ blockquote {
 .font-1-xxl {
   font: 600 4rem/4.5rem "Poppins", sans-serif;
 }
+.font-1-ms {
+  font: 600 36px/48px "Poppins", sans-serif;
+}
 .font-2-l {
   font: 400 1.5rem/2.25rem "Roboto", sans-serif;
 }
@@ -136,6 +139,15 @@ blockquote {
 }
 .font-2-s {
   font: 400 1rem/1.5rem "Roboto", sans-serif;
+}
+.font-1-p {
+  font: 600 2.25rem/3rem "Poppins", sans-serif;
+}
+.font-1-xl {
+  font: 600 2rem/2.5rem "Poppins", sans-serif;
+}
+.font-1-xs {
+  font: 400 0.875rem/1.25rem "Roboto", sans-serif;
 }
 /*Conteiner tamanho*/
 .conteiner-base {
