--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,4 @@
 @import url("../home/tecnologias.css");
 @import url("../home/parceiros.css");
 @import url("../home/depoimento.css");
+@import url("../home/seguros.css");
