--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,3 +6,4 @@
 @import url("../home/parceiros.css");
 @import url("../home/depoimento.css");
 @import url("../home/seguros.css");
+@import url("../home/footer.css");
