--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,3 +7,4 @@
 @import url("../home/depoimento.css");
 @import url("../home/seguros.css");
 @import url("../home/footer.css");
+@import url("../termos/termos.css");
