--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,3 +8,4 @@
 @import url("../home/seguros.css");
 @import url("../home/footer.css");
 @import url("../termos/termos.css");
+@import url("../bicicletas/bicicletas.css");
