--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,3 +9,4 @@
 @import url("../home/footer.css");
 @import url("../termos/termos.css");
 @import url("../bicicletas/bicicletas.css");
+@import url("../seguros/seguros-page.css");
