--- a/estilos-gerais/style.css
+++ b/estilos-gerais/style.css
@@ -11,3 +11,5 @@
 @import url("../bicicletas/bicicletas.css");
 @import url("../seguros/seguros-page.css");
 @import url("../bicicletas/bikes-style.css");
+@import url("../contato/contato.css");
+@import url("./formulario.css");
