--- a/estilos-gerais/style.css
+++ b/estilos-gerais/style.css
@@ -13,3 +13,4 @@
 @import url("../bicicletas/bikes-style.css");
 @import url("../contato/contato.css");
 @import url("./formulario.css");
+@import url("../orcamento/orcamento.css");
