--- a/home/lista-modelos.css
+++ b/home/lista-modelos.css
@@ -17,7 +17,7 @@
   transition: 0.5s ease-in-out;
 }
 .lista-bikes img:hover {
-  scale: 1.009;
+  transform: translateY(-2px);
   box-shadow: 2px 2px 20px #7a7a7a;
 }
 .lista-bikes a {
@@ -91,5 +91,9 @@
     margin-top: 8px;
     margin-left: 0;
     font-size: 0.8rem;
+  }
+  .lista-bikes img:hover {
+    box-shadow: none;
+    transform: none;
   }
 }
