--- a/estilos-gerais/style.css
+++ b/estilos-gerais/style.css
@@ -14,3 +14,4 @@
 @import url("../contato/contato.css");
 @import url("./formulario.css");
 @import url("../orcamento/orcamento.css");
+@import url("./animacao.css");
