--- a/seguros/seguros-page.css
+++ b/seguros/seguros-page.css
@@ -84,7 +84,7 @@
   display: inline-block;
   width: 14px;
   height: 6px;
-  background: url("../../img/icones/seta-abrir.svg");
+  background: url("../img/icones/seta-abrir.svg");
   transition: 0.3s;
 }
 .texto-perguntas button:hover::after,
