--- a/seguros/seguros-page.css
+++ b/seguros/seguros-page.css
@@ -52,13 +52,13 @@
   padding: 20px;
   border-radius: 4px;
 }
-.texto-perguntas dd {
+.js .texto-perguntas dd {
   padding-left: 20px;
   padding-top: 16px;
   max-width: 80ch;
   display: none;
 }
-.texto-perguntas dd.ativa {
+.js .texto-perguntas dd.ativa {
   display: block;
 }
 .texto-perguntas button {
